Second Day - Python Week

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,24 +3,33 @@
   "redhat.telemetry.enabled": false,
   "workbench.colorTheme": "Gruvbox Dark Hard",
   "editor.fontSize": 18,
+  "editor.formatOnSave": true,
+  "python.formatting.blackPath": "black",
+  "python.formatting.provider": "black",
+  "python.linting.mypyEnabled": true,
+  "python.linting.flake8Enabled": true,
+  "python.linting.flake8Args": [
+    "--max-line-length=79",
+  ],
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true,
+    },
+  },
   "git.autofetch": true,
   "python.insidersChannel": "off",
   "update.mode": "manual",
   "extensions.autoUpdate": false,
   "files.autoSave": "onFocusChange",
   "files.exclude": {
-    "**/*.egg-info": true,
-    ".gitpod.yml": true,
-    "LICENSE": true,
-    ".vscode/": true,
-    "**/__pycache__": true,
-    ".gitignore": true,
-    ".mypy_cache": true,
-    "coverage.xml": true,
-    ".pytest_cache": true
+    "**/.DS_Store": false,
+    "**/.git": false,
+    "**/.hg": false,
+    "**/.svn": false,
+    "**/CVS": false,
+    "**/Thumbs.db": false
   },
   "editor.mouseWheelZoom": true,
   "python.linting.pylintEnabled": false,
-  "python.linting.flake8Enabled": true,
   "python.linting.enabled": true
 }
