--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,13 @@ fastapi = "^0.75.2"
 typer = "^0.4.1"
 rich = "^12.2.0"
 dynaconf = "^3.1.8"
-black = "^22.3.0"
-flake8 = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.2.0"
+mypy = "^0.961"
+flake8 = "^4.0.1"
+black = "^22.3.0"
+isort = "^5.10.1"
 
 [tool.poetry.scripts]
 beerlog = "beerlog.__main__:main"
@@ -24,3 +26,6 @@ beerlog = "beerlog.__main__:main"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
