--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,5 +27,8 @@ beerlog = "beerlog.__main__:main"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.black]
+line-length = 79
+
 [tool.isort]
 profile = "black"
