--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.75.2"
 typer = "^0.4.1"
 rich = "^12.2.0"
 dynaconf = "^3.1.8"
+uvicorn = "^0.17.6"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.2.0"
