--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ mypy = "^0.961"
 flake8 = "^4.0.1"
 black = "^22.3.0"
 isort = "^5.10.1"
+pytest = "^7.1.2"
+requests = "^2.28.0"
 
 [tool.poetry.scripts]
 beerlog = "beerlog.__main__:main"
