--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.8", "3.10"]
-        os: [manjaro-latest, ubuntu-latest]
+        os: [ubuntu-latest]
     runs-on: ${{matrix.os}}
 
     steps:
